# Receipty

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: config.py
src/receipty/: __init__.py  config.py  generate_clean_data.py  generate_more_clean_data.py  generate_more_ocr_input.py
src/receipty/api/: LLM_processor.py  db.py  main.py
src/receipty/dashboard/: app.py
src/receipty/data_generation/: generate_clean_data.py  generate_more_clean_data.py  generate_more_ocr_input.py  generate_ocr_input.py
src/receipty/models/: receipt_models.py
