[project]
name = "receipty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul", email = "paul.lachaise19@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "faker>=37.11.0",
    "fastapi[standard]>=0.116.1",
    "openai>=1.97.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "supabase>=2.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
